<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/profileMainFragment"
        android:icon="@drawable/ic_profile"
        android:iconTint="@color/blue_light"
        android:title="@string/profile"/>

    <item
        android:id="@+id/habitsMainFragment"
        android:icon="@drawable/ic_habbits"
        android:iconTint="@color/blue_light"
        android:title="@string/habits"/>

    <item
        android:id="@+id/scheduleMainFragment"
        android:icon="@drawable/ic_scheduler"
        android:iconTint="@color/blue_light"
        android:title="@string/schedule"/>

    <item
        android:id="@+id/tasksMainFragment"
        android:icon="@drawable/ic_tasks"
        android:iconTint="@color/blue_light"
        android:title="@string/tasks"/>

    <item
        android:id="@+id/notesMainFragment"
        android:icon="@drawable/ic_notes"
        android:iconTint="@color/blue_light"
        android:title="@string/notes"/>

</menu>